# obs-hotkeys

./: .gitmodules  CMakeLists.txt  README.md  azure-pipelines.yml
CI/: prepare-obs-windows.cmd
src/: obs-hotkey.cpp  obs-hotkey.h
src/forms/: OBSHotkeysWidget.ui  obs-hotkeys-widget.cpp  obs-hotkeys-widget.hpp
